--- a/apps/watchtower/docker-compose.yml
+++ b/apps/watchtower/docker-compose.yml
@@ -11,29 +11,19 @@ services:
     container_name: watchtower
     restart: unless-stopped
 
-    # 1) Publish the UI/API port
     ports:
       - "8080:8080"
 
     environment:
-      # labels & schedule
       - WATCHTOWER_LABEL_ENABLE=${WATCHTOWER_LABEL_ENABLE}
       - WATCHTOWER_SCHEDULE=${WATCHTOWER_SCHEDULE}
       - TZ=Europe/Prague
-
-      # flags to enable HTTP-API mode
-      - WATCHTOWER_HTTP_API_UPDATE=true            # enables /v1/update endpoint :contentReference[oaicite:0]{index=0}
-      - WATCHTOWER_HTTP_API_PERIODIC_POLLS=true     # keeps scheduled checks active :contentReference[oaicite:1]{index=1}
-
-      # 3) API token (required or Watchtower will exit) 
-      - WATCHTOWER_HTTP_API_TOKEN=${WATCHTOWER_HTTP_API_TOKEN}  # must match your .env :contentReference[oaicite:2]{index=2}
-
-      # cleanup, rollback, UI toggle
+      - WATCHTOWER_HTTP_API_UPDATE=true
+      - WATCHTOWER_HTTP_API_PERIODIC_POLLS=true
+      - WATCHTOWER_HTTP_API_TOKEN=${WATCHTOWER_HTTP_API_TOKEN}
       - WATCHTOWER_CLEANUP=${WATCHTOWER_CLEANUP}
       - WATCHTOWER_ROLLBACK=${WATCHTOWER_ROLLBACK}
       - WATCHTOWER_UI=${WATCHTOWER_UI}
-
-      # notifications & extra args
       - WATCHTOWER_NOTIFICATIONS=${WATCHTOWER_NOTIFICATIONS}
       - WATCHTOWER_NOTIFICATION_SLACK_HOOK_URL=${WATCHTOWER_NOTIFICATION_SLACK_HOOK_URL}
       - WATCHTOWER_NOTIFICATION_MSTEAMS_HOOK_URL=${WATCHTOWER_NOTIFICATION_MSTEAMS_HOOK_URL}
@@ -50,7 +40,7 @@ services:
 
     labels:
       - "traefik.enable=${WATCHTOWER_UI}"
-      - "traefik.docker.network=tipi_main_network"  
+      - "traefik.docker.network=tipi_main_network"
       - "traefik.http.routers.watchtower.rule=Host(`watchtower.${APP_DOMAIN}`)"
       - "traefik.http.routers.watchtower.entrypoints=websecure"
       - "traefik.http.routers.watchtower.tls=true"
