--- a/apps/watchtower/docker-compose.yml
+++ b/apps/watchtower/docker-compose.yml
@@ -7,7 +7,7 @@ services:
     environment:
       - WATCHTOWER_LABEL_ENABLE=${WATCHTOWER_LABEL_ENABLE}
       - WATCHTOWER_SCHEDULE=${WATCHTOWER_SCHEDULE}
-      - TZ="Europe/Prague"
+      - TZ=Europe/Prague
       - WATCHTOWER_CLEANUP=${WATCHTOWER_CLEANUP}
       - WATCHTOWER_ROLLBACK=${WATCHTOWER_ROLLBACK}
       - WATCHTOWER_UI=${WATCHTOWER_UI}
@@ -27,6 +27,8 @@ services:
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
     restart: unless-stopped
+    expose:
+      - "8080"
     labels:
       runtipi.managed: "true"
       traefik.enable: "${WATCHTOWER_UI}"
