--- a/apps/dockcheck/config.json
+++ b/apps/dockcheck/config.json
@@ -8,36 +8,22 @@
   "available": true,
   "exposable": true,
   "dynamic_config": true,
-  "categories": [
-    "utilities",
-    "automation"
-  ],
-  "description": "Automate Docker image update checks, selective updates, notifications and auto-prune.",
-  "short_desc": "CLI for Docker image updates",
+  "categories": ["utilities", "automation"],
+  "description": "Core Docker image update checks with simple toggles.",
+  "short_desc": "Simple Docker updater",
   "author": "mag37",
   "source": "https://github.com/mag37/dockcheck",
   "created_at": 1742179200000,
   "updated_at": 1742179200000,
   "supported_architectures": ["amd64", "arm64"],
   "form_fields": [
-    { "type": "number",  "label": "Timeout per container (seconds)", "env_variable": "TIMEOUT" },
-    { "type": "number",  "label": "Max async checks", "placeholder": "0-32", "env_variable": "MAX_ASYNC" },
-    { "type": "number",  "label": "Progress bar width", "env_variable": "BAR_WIDTH" },
-    { "type": "boolean", "label": "Automatic updates (AutoMode)", "env_variable": "AUTO_MODE" },
-    { "type": "boolean", "label": "Check only (DontUpdate)", "env_variable": "DONT_UPDATE" },
-    { "type": "boolean", "label": "Auto-prune dangling images", "env_variable": "AUTO_PRUNE" },
-    { "type": "boolean", "label": "Auto self-update script", "env_variable": "AUTO_SELF_UPDATE" },
-    { "type": "boolean", "label": "Notify on updates", "env_variable": "NOTIFY" },
-    { "type": "boolean", "label": "Include stopped containers", "env_variable": "INCLUDE_STOPPED" },
-    { "type": "boolean", "label": "Only if label exists", "env_variable": "ONLY_LABEL" },
-    { "type": "boolean", "label": "Force restart whole stack", "env_variable": "FORCE_STACK" },
-    { "type": "boolean", "label": "Only specific container", "env_variable": "ONLY_SPECIFIC" },
-    { "type": "boolean", "label": "Monochrome mode", "env_variable": "MONO_MODE" },
-    { "type": "boolean", "label": "Print release URLs", "env_variable": "PRINT_URL" },
-    { "type": "boolean", "label": "Print Markdown URLs", "env_variable": "PRINT_MARKDOWN" },
+    { "type": "boolean", "label": "Automatic updates", "env_variable": "AUTO_MODE" },
+    { "type": "number",  "label": "Max parallel checks", "placeholder": "1-32", "env_variable": "MAX_ASYNC" },
+    { "type": "number",  "label": "Min image age (days)", "placeholder": "0", "env_variable": "DAYS_OLD" },
     { "type": "text",    "label": "Exclude containers (comma)", "env_variable": "EXCLUDE_CONTAINERS" },
-    { "type": "text",    "label": "Include only label name", "env_variable": "ONLY_LABEL_NAME" },
-    { "type": "text",    "label": "Additional flags", "env_variable": "EXTRA_FLAGS" },
-    { "type": "text",    "label": "Traefik router hostnames (comma)", "env_variable": "TRAEFIK_HOSTS" }
+    { "type": "text",    "label": "Only update if label present", "env_variable": "ONLY_LABEL" },
+    { "type": "boolean", "label": "Auto-prune images", "env_variable": "AUTO_PRUNE" },
+    { "type": "text",    "label": "Extra dockcheck flags", "env_variable": "EXTRA_FLAGS" },
+    { "type": "text",    "label": "Traefik hostnames (comma)", "env_variable": "TRAEFIK_HOSTS" }
   ]
 }
