--- a/apps/dockcheck/docker-compose.yml
+++ b/apps/dockcheck/docker-compose.yml
@@ -10,42 +10,20 @@ services:
              chmod +x /usr/local/bin/dockcheck.sh && \
              exec dockcheck.sh $${DOCKCHECK_FLAGS}"
     environment:
-      TIMEOUT: "${TIMEOUT-10}"
-      MAX_ASYNC: "${MAX_ASYNC-1}"
-      BAR_WIDTH: "${BAR_WIDTH-50}"
       AUTO_MODE: "${AUTO_MODE-false}"
-      DONT_UPDATE: "${DONT_UPDATE-false}"
-      AUTO_PRUNE: "${AUTO_PRUNE-false}"
-      AUTO_SELF_UPDATE: "${AUTO_SELF_UPDATE-false}"
-      NOTIFY: "${NOTIFY-false}"
-      INCLUDE_STOPPED: "${INCLUDE_STOPPED-false}"
-      ONLY_LABEL: "${ONLY_LABEL-false}"
-      FORCE_STACK: "${FORCE_STACK-false}"
-      ONLY_SPECIFIC: "${ONLY_SPECIFIC-false}"
-      MONO_MODE: "${MONO_MODE-false}"
-      PRINT_URL: "${PRINT_URL-false}"
-      PRINT_MARKDOWN: "${PRINT_MARKDOWN-false}"
+      MAX_ASYNC: "${MAX_ASYNC-1}"
+      DAYS_OLD: "${DAYS_OLD-0}"
       EXCLUDE_CONTAINERS: "${EXCLUDE_CONTAINERS-}"
-      ONLY_LABEL_NAME: "${ONLY_LABEL_NAME-}"
+      ONLY_LABEL: "${ONLY_LABEL-}"
+      AUTO_PRUNE: "${AUTO_PRUNE-false}"
       EXTRA_FLAGS: "${EXTRA_FLAGS-}"
-      DOCKCHECK_FLAGS: |-
-        $${TIMEOUT:+-t $${TIMEOUT}} \
-        $${MAX_ASYNC:+-x $${MAX_ASYNC}} \
-        $${BAR_WIDTH:+-b $${BAR_WIDTH}} \
+      DOCKCHECK_FLAGS: >
         $${AUTO_MODE:+-a} \
-        $${DONT_UPDATE:+-n} \
-        $${NOTIFY:+-i} \
-        $${AUTO_PRUNE:+-p} \
-        $${AUTO_SELF_UPDATE:+-u} \
-        $${INCLUDE_STOPPED:+-s} \
-        $${ONLY_LABEL:+-l} \
-        $${FORCE_STACK:+-f} \
-        $${ONLY_SPECIFIC:+-F} \
-        $${MONO_MODE:+-m} \
-        $${PRINT_URL:+-I} \
-        $${PRINT_MARKDOWN:+-M} \
+        -x $${MAX_ASYNC} \
+        -d $${DAYS_OLD} \
         -e $${EXCLUDE_CONTAINERS} \
-        -L $${ONLY_LABEL_NAME} \
+        -l $${ONLY_LABEL} \
+        $${AUTO_PRUNE:+-p} \
         $${EXTRA_FLAGS}
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock:ro
@@ -54,7 +32,6 @@ services:
       traefik.http.routers.dockcheck.rule: "Host(`${TRAEFIK_HOSTS}`)"
       traefik.http.routers.dockcheck.entrypoints: websecure
       traefik.http.routers.dockcheck.tls.certresolver: myresolver
-      traefik.http.services.dockcheck.loadbalancer.server.scheme: http
       traefik.http.services.dockcheck.loadbalancer.server.port: "8080"
     restart: on-failure
     logging:
