--- a/apps/dockcheck/config.json
+++ b/apps/dockcheck/config.json
@@ -17,13 +17,47 @@
   "updated_at": 1742179200000,
   "supported_architectures": ["amd64", "arm64"],
   "form_fields": [
-    { "type": "boolean", "label": "Automatic updates", "env_variable": "AUTO_MODE" },
-    { "type": "number",  "label": "Max parallel checks", "placeholder": "1-32", "env_variable": "MAX_ASYNC" },
-    { "type": "number",  "label": "Min image age (days)", "placeholder": "0", "env_variable": "DAYS_OLD" },
-    { "type": "text",    "label": "Exclude containers (comma)", "env_variable": "EXCLUDE_CONTAINERS" },
-    { "type": "text",    "label": "Only update if label present", "env_variable": "ONLY_LABEL" },
-    { "type": "boolean", "label": "Auto-prune images", "env_variable": "AUTO_PRUNE" },
-    { "type": "text",    "label": "Extra dockcheck flags (optional)", "env_variable": "EXTRA_FLAGS" },
-    { "type": "text",    "label": "Traefik hostnames (comma)", "env_variable": "TRAEFIK_HOSTS" }
+    {
+      "type": "boolean",
+      "label": "Automatic updates",
+      "env_variable": "AUTO_MODE"
+    },
+    {
+      "type": "number",
+      "label": "Max parallel checks",
+      "placeholder": "1-32",
+      "env_variable": "MAX_ASYNC"
+    },
+    {
+      "type": "number",
+      "label": "Min image age (days)",
+      "placeholder": "0",
+      "env_variable": "DAYS_OLD"
+    },
+    {
+      "type": "text",
+      "label": "Exclude containers (comma)",
+      "env_variable": "EXCLUDE_CONTAINERS"
+    },
+    {
+      "type": "text",
+      "label": "Only update if label present",
+      "env_variable": "ONLY_LABEL"
+    },
+    {
+      "type": "boolean",
+      "label": "Auto-prune images",
+      "env_variable": "AUTO_PRUNE"
+    },
+    {
+      "type": "text",
+      "label": "Extra dockcheck flags (optional)",
+      "env_variable": "EXTRA_FLAGS"
+    },
+    {
+      "type": "text",
+      "label": "Traefik hostnames (comma)",
+      "env_variable": "TRAEFIK_HOSTS"
+    }
   ]
 }
