--- a/apps/dockcheck/docker-compose.yml
+++ b/apps/dockcheck/docker-compose.yml
@@ -13,17 +13,17 @@ services:
       AUTO_MODE: "${AUTO_MODE-false}"
       MAX_ASYNC: "${MAX_ASYNC-1}"
       DAYS_OLD: "${DAYS_OLD-0}"
-      EXCLUDE_CONTAINERS: "${EXCLUDE_CONTAINERS-}"
-      ONLY_LABEL: "${ONLY_LABEL-}"
+      EXCLUDE_CONTAINERS: "${EXCLUDE_CONTAINERS-}\""
+      ONLY_LABEL: "${ONLY_LABEL-}\""
       AUTO_PRUNE: "${AUTO_PRUNE-false}"
-      EXTRA_FLAGS: "${EXTRA_FLAGS-}"
-      DOCKCHECK_FLAGS: >
-        $${AUTO_MODE:+-a} \
-        $${MAX_ASYNC:+-x $${MAX_ASYNC}} \
-        $${DAYS_OLD:+-d $${DAYS_OLD}} \
-        $${EXCLUDE_CONTAINERS:+-e $${EXCLUDE_CONTAINERS}} \
-        $${ONLY_LABEL:+-l} \
-        $${AUTO_PRUNE:+-p} \
+      EXTRA_FLAGS: "${EXTRA_FLAGS-}\""
+      DOCKCHECK_FLAGS: |
+        $${AUTO_MODE:+-a}
+        $${MAX_ASYNC:+-x $${MAX_ASYNC}}
+        $${DAYS_OLD:+-d $${DAYS_OLD}}
+        $${EXCLUDE_CONTAINERS:+-e $${EXCLUDE_CONTAINERS}}
+        $${ONLY_LABEL:+-l}
+        $${AUTO_PRUNE:+-p}
         $${EXTRA_FLAGS}
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock:ro
