--- a/apps/dockcheck/config.json
+++ b/apps/dockcheck/config.json
@@ -1,7 +1,7 @@
 {
   "$schema": "../app-info-schema.json",
   "id": "dockcheck",
-  "name": "Dockcheck",
+  "name": "Dockcheck+",
   "version": "0.6.4",
   "tipi_version": 1,
   "port": 8080,
