--- a/apps/dockcheck/docker-compose.yml
+++ b/apps/dockcheck/docker-compose.yml
@@ -5,17 +5,12 @@ services:
     container_name: dockcheck
     command: >-
       sh -c "apk add --no-cache bash jq curl && \
-             ARCH=$(uname -m) && \
-             case \"$ARCH\" in \
-               x86_64) BIN=regctl-linux-amd64;; \
-               aarch64) BIN=regctl-linux-arm64;; \
-               *) BIN=regctl-linux-amd64;; \
-             esac && \
-             curl -L https://github.com/regclient/regclient/releases/latest/download/$BIN \
-               -o /usr/local/bin/regctl && chmod +x /usr/local/bin/regctl && \
-             curl -L https://raw.githubusercontent.com/mag37/dockcheck/main/dockcheck.sh \
-               -o /usr/local/bin/dockcheck.sh && chmod +x /usr/local/bin/dockcheck.sh && \
-             exec dockcheck.sh $${DOCKCHECK_FLAGS}"
+      curl -L https://github.com/regclient/regclient/releases/latest/download/regctl-linux-amd64 -o /usr/local/bin/regctl && \
+      chmod +x /usr/local/bin/regctl && \
+      curl -L https://raw.githubusercontent.com/mag37/dockcheck/main/dockcheck.sh \
+      -o /usr/local/bin/dockcheck.sh && \
+      chmod +x /usr/local/bin/dockcheck.sh && \
+      exec dockcheck.sh $${DOCKCHECK_FLAGS}"
     environment:
       AUTO_MODE: "${AUTO_MODE-false}"
       MAX_ASYNC: "${MAX_ASYNC-1}"
@@ -26,18 +21,12 @@ services:
       EXTRA_FLAGS: "${EXTRA_FLAGS-}"
       TRAEFIK_HOSTS: "${TRAEFIK_HOSTS-}"
       DOCKCHECK_FLAGS: |
-        $${AUTO_MODE:+-a}
-        $${MAX_ASYNC:+-x $${MAX_ASYNC}}
-        $${DAYS_OLD:+-d $${DAYS_OLD}}
-        $${EXCLUDE_CONTAINERS:+-e $${EXCLUDE_CONTAINERS}}
-        $${ONLY_LABEL:+-l}
-        $${AUTO_PRUNE:+-p}
-        $${EXTRA_FLAGS}
+        $${AUTO_MODE:+-a} $${MAX_ASYNC:+-x $${MAX_ASYNC}} $${DAYS_OLD:+-d $${DAYS_OLD}} $${EXCLUDE_CONTAINERS:+-e $${EXCLUDE_CONTAINERS}} $${ONLY_LABEL:+-l} $${AUTO_PRUNE:+-p} $${EXTRA_FLAGS}
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock:ro
     labels:
       traefik.enable: "true"
-      traefik.http.routers.dockcheck.rule: "Host(`${TRAEFIK_HOSTS}`)"
+      traefik.http.routers.dockcheck.rule: "Host(${TRAEFIK_HOSTS})"
       traefik.http.routers.dockcheck.entrypoints: websecure
       traefik.http.routers.dockcheck.tls.certresolver: myresolver
       traefik.http.services.dockcheck.loadbalancer.server.port: "8080"
