--- a/apps/gitea/config.json
+++ b/apps/gitea/config.json
@@ -4,7 +4,7 @@
   "port": 8108,
   "available": true,
   "exposable": true,
-  "id": "gitea",
+  "id": "giteaaaa",
   "tipi_version": 42,
   "version": "latest",
   "categories": ["development"],
