--- a/apps/gitea/config.json
+++ b/apps/gitea/config.json
@@ -1,10 +1,10 @@
 {
   "$schema": "../app-info-schema.json",
-  "name": "Git+",
+  "name": "Gitea+",
   "port": 8108,
   "available": true,
   "exposable": true,
-  "id": "giteaaaa",
+  "id": "gitea",
   "tipi_version": 42,
   "version": "latest",
   "categories": ["development"],
