--- a/apps/gitea/config.json
+++ b/apps/gitea/config.json
@@ -1,11 +1,11 @@
 {
   "$schema": "../app-info-schema.json",
-  "name": "Gitea+",
+  "name": "Giteaaa+",
   "port": 8108,
   "available": true,
   "exposable": true,
-  "id": "gitea",
-  "tipi_version": 42,
+  "id": "giteaaaa",
+  "tipi_version": 1,
   "version": "latest",
   "categories": ["development"],
   "description": "Gitea is a painless self-hosted Git service. It is similar to GitHub, Bitbucket, and GitLab. Gitea is a fork of Gogs. See the Gitea Announcement blog post to read about the justification for a fork.",
