--- a/apps/vikunja/config.json
+++ b/apps/vikunja/config.json
@@ -1,6 +1,6 @@
 {
   "$schema": "../app-info-schema.json",
-  "name": "Vikunja+",
+  "name": "Vikunja",
   "available": true,
   "exposable": true,
   "dynamic_config": true,
@@ -8,7 +8,7 @@
   "id": "vikunja",
   "categories": ["utilities"],
   "tipi_version": 16,
-  "version": "latest",
+  "version": "0.24.6",
   "description": "The Todo-app to organize your life.",
   "short_desc": "The Todo-app to organize your life.",
   "author": "kolaente",
@@ -22,8 +22,8 @@
     },
     {
       "type": "random",
-      "label": "Vikunja JWT secret",
-      "env_variable": "VIKUNJA_SERVICE_JWTSECRET"
+      "label": "Vikunja secret",
+      "env_variable": "VIKUNJA_SERVICE_SECRET"
     }
   ],
   "supported_architectures": ["arm64", "amd64"],
