--- a/apps/vikunja/docker-compose.yml
+++ b/apps/vikunja/docker-compose.yml
@@ -1,14 +1,16 @@
+version: "3.7"
+
 services:
   vikunja:
     container_name: vikunja
-    image: vikunja/vikunja:0.24.6
+    image: vikunja/vikunja:latest
     environment:
       VIKUNJA_DATABASE_HOST: vikunja-db
       VIKUNJA_DATABASE_PASSWORD: ${VIKUNJA_DB_PASSWORD}
       VIKUNJA_DATABASE_TYPE: postgres
       VIKUNJA_DATABASE_USER: tipi
       VIKUNJA_DATABASE_DATABASE: vikunja
-      VIKUNJA_SERVICE_JWTSECRET: ${VIKUNJA_SERVICE_SECRET}
+      VIKUNJA_SERVICE_JWTSECRET: ${VIKUNJA_SERVICE_JWTSECRET}
       VIKUNJA_SERVICE_PUBLICURL: ${APP_PROTOCOL:-http}://${APP_DOMAIN}/
     volumes:
       - ${APP_DATA_DIR}/data/files:/app/vikunja/files
@@ -46,6 +48,7 @@ services:
       traefik.http.routers.vikunja-local.service: vikunja
       traefik.http.routers.vikunja-local.tls: true
       runtipi.managed: true
+
   vikunja-db:
     container_name: vikunja-db
     image: postgres:14
