--- a/apps/gitea/config.json
+++ b/apps/gitea/config.json
@@ -1,12 +1,12 @@
 {
   "$schema": "../app-info-schema.json",
-  "name": "Gitea+",
+  "name": "Gitea",
   "port": 8108,
   "available": true,
   "exposable": true,
   "id": "gitea",
   "tipi_version": 42,
-  "version": "latest",
+  "version": "1.23.7",
   "categories": ["development"],
   "description": "Gitea is a painless self-hosted Git service. It is similar to GitHub, Bitbucket, and GitLab. Gitea is a fork of Gogs. See the Gitea Announcement blog post to read about the justification for a fork.",
   "short_desc": "Gitea - Git with a cup of tea · A painless self-hosted Git service. · Cross-platform · Easy to install · Lightweight · Open Source.",
