--- a/apps/aiostreams/config.json
+++ b/apps/aiostreams/config.json
@@ -8,7 +8,7 @@
   "exposable": true,
   "dynamic_config": true,
   "port": 3000,
-  "categories": ["media", "streaming", "addons"],
+  "categories": ["media", "ai"],
   "author": "viren070",
   "description": "Aggregate and customize multiple Stremio addons and debrid services in one interface.",
   "short_desc": "Unified Stremio addon with filtering, sorting, and proxy support.",
@@ -22,11 +22,11 @@
     {"type":"password","label":"Secret Key","env_variable":"SECRET_KEY","hint":"64-character hex string"},
     {"type":"text","label":"API Key","env_variable":"API_KEY","hint":"Optional, leave empty to disable"},
     {"type":"boolean","label":"Show Dice Emoji","env_variable":"SHOW_DIE","default":false},
-    {"type":"select","label":"Log Level","env_variable":"LOG_LEVEL","options":["debug","info","warn","error"],"default":"info"},
-    {"type":"select","label":"Log Format","env_variable":"LOG_FORMAT","options":["json","text"],"default":"text"},
+    {"type":"text","label":"Log Level","env_variable":"LOG_LEVEL","default":"info","hint":"One of: debug, info, warn, error"},
+    {"type":"text","label":"Log Format","env_variable":"LOG_FORMAT","default":"text","hint":"One of: json, text"},
     {"type":"boolean","label":"Log Sensitive Info","env_variable":"LOG_SENSITIVE_INFO","default":true},
 
-    {"type":"text","label":"Addon Proxy URL","env_variable":"ADDON_PROXY","required":false,"hint":"e.g. http://warp:1080"},
+    {"type":"url","label":"Addon Proxy URL","env_variable":"ADDON_PROXY","required":false,"hint":"e.g. http://warp:1080"},
     {"type":"text","label":"Proxy Config Rules","env_variable":"ADDON_PROXY_CONFIG","required":false,"hint":"Comma-separated domain:boolean, e.g. *.strem.fun:true, *:false"},
 
     {"type":"number","label":"Max Addons","env_variable":"MAX_ADDONS","default":15},
@@ -38,55 +38,55 @@
     {"type":"number","label":"Min Timeout (ms)","env_variable":"MIN_TIMEOUT","default":1000},
 
     {"type":"number","label":"MediaFlow IP Timeout (ms)","env_variable":"MEDIAFLOW_IP_TIMEOUT","default":30000},
-    {"type":"text","label":"Default MediaFlow URL","env_variable":"DEFAULT_MEDIAFLOW_URL","required":false},
+    {"type":"url","label":"Default MediaFlow URL","env_variable":"DEFAULT_MEDIAFLOW_URL","default":"https://mediaflow.elfhosted.com/"},
     {"type":"password","label":"MediaFlow API Password","env_variable":"DEFAULT_MEDIAFLOW_API_PASSWORD","required":false},
     {"type":"text","label":"MediaFlow Public IP","env_variable":"DEFAULT_MEDIAFLOW_PUBLIC_IP","required":false},
     {"type":"boolean","label":"Encrypt MediaFlow URLs","env_variable":"ENCRYPT_MEDIAFLOW_URLS","default":true},
 
     {"type":"number","label":"StremThru Timeout (ms)","env_variable":"STREMTHRU_TIMEOUT","default":30000},
-    {"type":"text","label":"Default StremThru URL","env_variable":"DEFAULT_STREMTHRU_URL","required":false},
+    {"type":"url","label":"Default StremThru URL","env_variable":"DEFAULT_STREMTHRU_URL","required":false},
     {"type":"text","label":"Default StremThru Credential","env_variable":"DEFAULT_STREMTHRU_CREDENTIAL","required":false},
     {"type":"text","label":"StremThru Public IP","env_variable":"DEFAULT_STREMTHRU_PUBLIC_IP","required":false},
     {"type":"boolean","label":"Encrypt StremThru URLs","env_variable":"ENCRYPT_STREMTHRU_URLS","default":true},
 
     {"type":"number","label":"MediaFusion Config Timeout (ms)","env_variable":"MEDIAFUSION_CONFIG_TIMEOUT","default":5000},
-    {"type":"text","label":"Default MediaFusion URL","env_variable":"MEDIAFUSION_URL","default":"https://mediafusion.elfhosted.com/"},
+    {"type":"url","label":"MediaFusion URL","env_variable":"MEDIAFUSION_URL","default":"https://mediafusion.elfhosted.com/"},
     {"type":"password","label":"MediaFusion API Password","env_variable":"MEDIAFUSION_API_PASSWORD","required":false},
 
-    {"type":"text","label":"Jackettio URL","env_variable":"JACKETTIO_URL","default":"https://jackettio.elfhosted.com/"},
-    {"type":"json","label":"Default Jackettio Indexers","env_variable":"DEFAULT_JACKETTIO_INDEXERS","default":["bitsearch","eztv","thepiratebay","therarbg","yts"]},
-    {"type":"text","label":"Default Jackettio StremThru URL","env_variable":"DEFAULT_JACKETTIO_STREMTHRU_URL","default":"https://stremthru.13377001.xyz"},
+    {"type":"url","label":"Jackettio URL","env_variable":"JACKETTIO_URL","default":"https://jackettio.elfhosted.com/"},
+    {"type":"text","label":"Default Jackettio Indexers (JSON array)","env_variable":"DEFAULT_JACKETTIO_INDEXERS","default":"[\"bitsearch\",\"eztv\",\"thepiratebay\",\"therarbg\",\"yts\"]"},
+    {"type":"url","label":"Default Jackettio StremThru URL","env_variable":"DEFAULT_JACKETTIO_STREMTHRU_URL","default":"https://stremthru.13377001.xyz"},
 
-    {"type":"text","label":"Stremio-Jackett URL","env_variable":"STREMIO_JACKETT_URL","default":"https://stremio-jackett.elfhosted.com/"},
+    {"type":"url","label":"Stremio-Jackett URL","env_variable":"STREMIO_JACKETT_URL","default":"https://stremio-jackett.elfhosted.com/"},
     {"type":"text","label":"Stremio-Jackett API Key","env_variable":"DEFAULT_STREMIO_JACKETT_JACKETT_API_KEY","required":false},
     {"type":"text","label":"TMDB API Key","env_variable":"DEFAULT_STREMIO_JACKETT_TMDB_API_KEY","required":false},
     {"type":"number","label":"Stremio-Jackett Timeout (ms)","env_variable":"DEFAULT_STREMIO_JACKETT_TIMEOUT","required":false},
 
-    {"type":"text","label":"StremThru Store URL","env_variable":"STREMTHRU_STORE_URL","default":"https://stremthru.elfhosted.com/stremio/store/"},
+    {"type":"url","label":"StremThru Store URL","env_variable":"STREMTHRU_STORE_URL","default":"https://stremthru.elfhosted.com/stremio/store/"},
     {"type":"number","label":"StremThru Store Timeout (ms)","env_variable":"DEFAULT_STREMTHRU_STORE_TIMEOUT","required":false},
 
-    {"type":"text","label":"Easynews+ URL","env_variable":"EASYNEWS_PLUS_URL","default":"https://b89262c192b0-stremio-easynews-addon.baby-beamup.club/"},
+    {"type":"url","label":"Easynews+ URL","env_variable":"EASYNEWS_PLUS_URL","default":"https://b89262c192b0-stremio-easynews-addon.baby-beamup.club/"},
     {"type":"number","label":"Easynews+ Timeout (ms)","env_variable":"DEFAULT_EASYNEWS_PLUS_TIMEOUT","required":false},
 
-    {"type":"text","label":"Easynews++ URL","env_variable":"EASYNEWS_PLUS_PLUS_URL","default":"https://easynews-cloudflare-worker.jqrw92fchz.workers.dev/"},
+    {"type":"url","label":"Easynews++ URL","env_variable":"EASYNEWS_PLUS_PLUS_URL","default":"https://easynews-cloudflare-worker.jqrw92fchz.workers.dev/"},
     {"type":"number","label":"Easynews++ Timeout (ms)","env_variable":"DEFAULT_EASYNEWS_PLUS_PLUS_TIMEOUT","required":false},
 
-    {"type":"text","label":"Torrentio URL","env_variable":"TORRENTIO_URL","default":"https://torrentio.strem.fun/"},
+    {"type":"url","label":"Torrentio URL","env_variable":"TORRENTIO_URL","default":"https://torrentio.strem.fun/"},
     {"type":"number","label":"Torrentio Timeout (ms)","env_variable":"DEFAULT_TORRENTIO_TIMEOUT","required":false},
 
-    {"type":"text","label":"Orion Addon URL","env_variable":"ORION_STREMIO_ADDON_URL","default":"https://5a0d1888fa64-orion.baby-beamup.club/"},
+    {"type":"url","label":"Orion Addon URL","env_variable":"ORION_STREMIO_ADDON_URL","default":"https://5a0d1888fa64-orion.baby-beamup.club/"},
     {"type":"number","label":"Orion Timeout (ms)","env_variable":"DEFAULT_ORION_STREMIO_ADDON_TIMEOUT","required":false},
 
-    {"type":"text","label":"Peerflix URL","env_variable":"PEERFLIX_URL","default":"https://peerflix-addon.onrender.com/"},
+    {"type":"url","label":"Peerflix URL","env_variable":"PEERFLIX_URL","default":"https://peerflix-addon.onrender.com/"},
     {"type":"number","label":"Peerflix Timeout (ms)","env_variable":"DEFAULT_PEERFLIX_TIMEOUT","required":false},
 
-    {"type":"text","label":"Torbox Addon URL","env_variable":"TORBOX_STREMIO_URL","default":"https://stremio.torbox.app/"},
+    {"type":"url","label":"Torbox Addon URL","env_variable":"TORBOX_STREMIO_URL","default":"https://stremio.torbox.app/"},
     {"type":"number","label":"Torbox Timeout (ms)","env_variable":"DEFAULT_TORBOX_STREMIO_TIMEOUT","required":false},
 
-    {"type":"text","label":"Easynews URL","env_variable":"EASYNEWS_URL","default":"https://ea627ddf0ee7-easynews.baby-beamup.club/"},
+    {"type":"url","label":"Easynews URL","env_variable":"EASYNEWS_URL","default":"https://ea627ddf0ee7-easynews.baby-beamup.club/"},
     {"type":"number","label":"Easynews Timeout (ms)","env_variable":"DEFAULT_EASYNEWS_TIMEOUT","required":false},
 
-    {"type":"text","label":"Debridio URL","env_variable":"DEBRIDIO_URL","default":"https://debridio.adobotec.com/"},
+    {"type":"url","label":"Debridio URL","env_variable":"DEBRIDIO_URL","default":"https://debridio.adobotec.com/"},
     {"type":"number","label":"Debridio Timeout (ms)","env_variable":"DEFAULT_DEBRIDIO_TIMEOUT","required":false},
 
     {"type":"text","label":"DMM Cast URL","env_variable":"DEFAULT_DMM_CAST_URL","required":false},
